# tg-post-exctract

./: .gitignore  README.md  pyproject.toml  teletoon
src/teletoon/: __init__.py  cli.py  core.py
